# distar

./: .travis.sh  .travis.yml  Makefile  distar.opam
docs/: README.md
src/: distar.ml  dune  jbuild  looklike.ml  parser.ml  target.html  typewriter.ml
tests/: dune  error.sh  jbuild  test.sh
tests/good_output/: source.ml  target.html  test.sh
tests/insert_reference/: insert_reference.expected  source.ml  target.html  target.html.expected  test.sh
tests/verbose_output/: bad_source.expected  error.expected  good_args.expected  source_1.ml  target.md  test.expected  test.sh
